# YTracker

./: .gitignore  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
docs/: rust-migration.md
ytracker-tauri/: .gitignore  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
ytracker-tauri/docs/: architecture.md  configuration.md  contracts.md  documentation-standards.md
ytracker-tauri/src/: App.css  App.tsx  App.wave3.test.tsx  main.tsx  utils.test.ts  utils.ts  vite-env.d.ts
ytracker-tauri/src-tauri/: Cargo.toml  build.rs  private.key  private.key.pub  tauri.conf.json
ytracker-tauri/src-tauri/capabilities/: default.json
ytracker-tauri/src-tauri/crates/ytracker_api/: Cargo.toml  README.md
ytracker-tauri/src-tauri/crates/ytracker_api/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  rate_limiter.rs
ytracker-tauri/src-tauri/crates/ytracker_api/src/models/: attachment.rs  checklist.rs  comment.rs  issue.rs  mod.rs  simple_entity.rs  transition.rs  user.rs  worklog.rs
ytracker-tauri/src-tauri/icons/: icon.icns
ytracker-tauri/src-tauri/src/: bridge.rs  config.rs  issue_store.rs  lib.rs  main.rs  secrets.rs  timer.rs
ytracker-tauri/src/components/: Checklist.test.tsx  Checklist.tsx  CreateIssueDialog.test.tsx  CreateIssueDialog.tsx  FilterSelect.test.tsx  FilterSelect.tsx  IssueDetail.test.tsx  IssueDetail.tsx  IssueList.test.tsx  IssueList.tsx  Loaders.test.tsx  Loaders.tsx  Login.test.tsx  Login.tsx  MarkdownEditor.test.tsx  MarkdownEditor.tsx  SettingsDialog.test.tsx  SettingsDialog.tsx  Timer.test.tsx  Timer.tsx  WorkLogDialog.test.tsx  WorkLogDialog.tsx
ytracker-tauri/src/hooks/: useBridge.test.tsx  useBridge.ts  useBridge.wave2.test.tsx  useBridge.wave4.test.tsx  useMediaQuery.test.tsx  useMediaQuery.ts
ytracker-tauri/src/lib/: utils.test.ts  utils.ts
ytracker-tauri/src/test/: setup.ts
