[package]
name = "ytracker_api"
version = "0.3.0"
edition = "2021"
description = "Native Rust client for the Yandex Tracker API"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["sync", "time"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
mockito = "1.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
